--- a/AsistenciaRDM/app/src/main/res/layout/activity_main.xml
+++ b/AsistenciaRDM/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mac.asistenciardm.MainActivity">
-
+    tools:context="com.example.mac.asistenciardm.MainActivity"
+    android:orientation="vertical">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:layout_weight="90"
+    android:gravity="top"
     >
+    <android.support.v7.widget.AppCompatImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:src="@mipmap/cabecera"
+        android:scaleY="1.2"
+        android:scaleX="1.2"
+
+    android:layout_gravity="center"/>
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="30"
+        android:orientation="vertical">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etUsuarioLoguin"
+            android:layout_margin="10dp"
+            android:hint="Usuario"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etClaveLogin"
+            android:hint="Clave"
+            android:layout_margin="10dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btIniciarSesion"
+            android:text="Ingresar"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 
 </LinearLayout>
-
-</FrameLayout>
