--- a/AsistenciaRDM 2.5/app/src/main/res/layout/content_main_asistencia.xml
+++ b/AsistenciaRDM 2.5/app/src/main/res/layout/content_main_asistencia.xml
@@ -7,8 +7,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.mac.asistenciardm.MainAsistenciaActivity"
     tools:showIn="@layout/app_bar_main_asistencia">
-<ListView
+
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/lvLista"></ListView>
+    android:id="@+id/fgFragmento"></FrameLayout>
 </android.support.constraint.ConstraintLayout>
