--- a/AsistenciaRDM 2.5/app/src/main/res/layout/item_lista_usuarios.xml
+++ b/AsistenciaRDM 2.5/app/src/main/res/layout/item_lista_usuarios.xml
@@ -5,10 +5,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvNombreUsuario"/>
+        android:id="@+id/tvNombreUsuario"
+        android:text="jvjhvjh"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvApellidosUsuario"/>
+        android:id="@+id/tvApellidosUsuario"
+        android:text="kbkfskjb"/>
 
 </LinearLayout>
