--- a/AsistenciaRDM 2.5.2/app/src/main/res/layout/activity_main.xml
+++ b/AsistenciaRDM 2.5.2/app/src/main/res/layout/activity_main.xml
@@ -9,24 +9,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:layout_weight="90"
+        android:layout_height="300dp"
         android:gravity="top">
 
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/colorAccent"
             android:layout_gravity="center"
-            android:scaleX="1.2"
-            android:scaleY="1.2"
-
             android:src="@mipmap/cabecera" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="30"
         android:orientation="vertical">
 
@@ -40,9 +36,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:textSize="25dp"
                 android:hint="Usuario" />
         </android.support.design.widget.TextInputLayout>
-
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tilClaveLogin"
             android:layout_width="match_parent"
@@ -53,18 +49,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:textSize="25dp"
                 android:hint="Clave"
                 android:inputType="textPassword"/>
         </android.support.design.widget.TextInputLayout>
-
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <Button
             android:id="@+id/btIniciarSesion"
-            android:layout_width="wrap_content"
+            android:backgroundTint="@color/colorAccent"
+            android:textColor="@android:color/white"
+            android:textSize="25dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="bottom|center"
             android:text="Ingresar" />
+</FrameLayout>
 
     </LinearLayout>
-
 
 </LinearLayout>
