--- a/AsistenciaRDM 2.5.2/app/src/main/res/layout/fragment_detalle_familia.xml
+++ b/AsistenciaRDM 2.5.2/app/src/main/res/layout/fragment_detalle_familia.xml
@@ -37,18 +37,22 @@
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
         android:text="Hijos:"/>
-<ListView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/lvListaHijos"></ListView>
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvListaHijos"></ListView>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="40dp"
         android:text="Asistio"
         android:id="@+id/btAsisio"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom"
         android:gravity="center"
         android:background="@color/colorAccent"/>
+    </FrameLayout>
 </LinearLayout>
