--- a/AsistenciaRDM 2.5.2/app/src/main/res/layout/fragment_modificar_asistencia.xml
+++ b/AsistenciaRDM 2.5.2/app/src/main/res/layout/fragment_modificar_asistencia.xml
@@ -28,6 +28,7 @@
         android:padding="20dp"
         android:textColor="@android:color/black"/>
 </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,16 +53,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spEstado"></Spinner>
-
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <TextView
     android:id="@+id/btActualizar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:text="Actualizar"
     android:textAlignment="center"
-    android:layout_gravity="center"
+    android:layout_gravity="bottom"
     android:gravity="center"
     android:textSize="40dp"
     android:textColor="@android:color/white"
     android:background="@color/colorAccent"/>
+</FrameLayout>
 </LinearLayout>
