--- a/AsistenciaRDM 2.5.2/app/src/main/res/menu/main_asistencia.xml
+++ b/AsistenciaRDM 2.5.2/app/src/main/res/menu/main_asistencia.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/actionNuevoEvento"
-        android:icon="@drawable/ic_menu_send"
+        android:icon="@drawable/mas"
         android:title="Agregar Evento"
         app:showAsAction="ifRoom"/>
 
